--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <audio id="backgroundMusic" src="C:/Users/Parth/Invitation/Suniyan-Suniyan-X-Tere-Naina_320(DJSathi.Me).mp3" loop></audio>
+<audio id="backgroundMusic" src="Suniyan-Suniyan-X-Tere-Naina_320(DJSathi.Me).mp3" loop></audio>
 
     <div class="book">
         <!-- Front Cover -->
